tests/resources/invalid/type/function/no_type.mamba
def g(self, a) => print("all non-self arguments should have type")